objects/SpaPdfCreation__e.object
<CustomObject>
    <label>SpaPdfCreation</label>
    <pluralLabel>SpaPdfCreation</pluralLabel>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Template_Id__c</fullName>
        <label>Quote Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>